[tool.poetry]
name = "repl_python3_tiktokbot"
version = "0.1.0"
description = ""
authors = ["Spinfal <spinfal@atheist.com>"]

[tool.poetry.dependencies]
python = "^3.8"
termcolor = "^1.1.0"
TikTokApi = "^3.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
